--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -1,15 +1,14 @@
-
 <div class="right">
     <form method="get" action="/quizzes">
         <input type="text" name="search" value="<%= locals.search || '' %>" placeholder="question to search" autocomplete="off" />
         <input type="submit" value="Search">
     </form>
 </div>
-
+<%if(title){%>
 <h1>
     <%= title || "Questions" %>:
 </h1>
-
+<%}%>
 <table>
     <% for (var i in quizzes) { %>
     <% var quiz = quizzes[i]; %>
@@ -20,7 +19,6 @@
         <td colspan="2">
             <small> (by <%= quiz.author ? quiz.author.username : "Anonymous" %>) </small>
         </td>
-
         <% if (session.user) { %>
             <% if (session.user.isAdmin || session.user.id === quiz.authorId) { %>
                 <td>
